[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Ships/spaceShips_007.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Audio/05982 old rocket launcher.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 68.9447

[node name="Player" type="Area2D" groups=[
"Player",
]]
scale = Vector2( 0.501004, 0.5 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 3.14159
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.297302, 6.67419 )
shape = SubResource( 1 )

[node name="FiringPositions" type="Node2D" parent="."]

[node name="Left Gun" type="Node2D" parent="FiringPositions"]
position = Vector2( -21.888, -39.2862 )

[node name="Right Gun" type="Node2D" parent="FiringPositions"]
position = Vector2( 19.9237, -39.5668 )

[node name="FireDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="shootAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
